# talk_python_course_fastapi

./: .editorconfig  .gitignore  pyproject.toml
api/: main.py
api/templates/home/: index.html.j2
backend/: main.py  settings_template.json
backend/api/: weather_api.py
backend/models/: location.py
backend/services/: openweather_service.py
backend/templates/shared/: layout.html.j2
backend/tools/: weather_cache.py
backend/views/: home.py
