[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ilya Lisin <blacklacost@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["statndard"], version = "^0.14.0"}
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.3"
black = {version = "^21.5b2", allow-prereleases = true}
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
